--- a/styles/scss/components/_switch.scss
+++ b/styles/scss/components/_switch.scss
@@ -10,6 +10,8 @@
         font-size: typography.$fs-toggle-text;
         margin: 0;
         margin-bottom: 0.3125rem;
+        line-height: 0.8125rem;
+        letter-spacing: 0.0625rem;
     }
 
     &__container {
